Tighten warnings and modules